--- a/src/Style/Countries.scss
+++ b/src/Style/Countries.scss
@@ -45,4 +45,47 @@
             }
         }
     }
+
+    .found {
+        margin-top: 25px;
+    }
+
+    .selected {
+        margin-top: 15px;
+        border-top: 1px dotted #abc;
+        width: 650px;
+
+        ul {
+            list-style-type: none;
+            margin-left: 5px;
+            margin-top: 25px;
+        }
+
+        .countryHeaderContainer {
+            margin-top: 25px;
+        }
+
+        .countryHeader {
+            font-size: 30px;
+            font-weight: bold;
+            display: inline-block;
+            width: 250px;
+        }
+
+        .fieldName {
+            font-weight: bold;
+            font-color: #888;
+            width: 130px;
+            display: inline-block;
+        }
+
+        .map {
+            float: left;
+            margin: 20px 20px 0 60px;
+        }
+
+        .details {
+            float: left;
+        }
+    }
 }
